# PolyLlama

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  main.py  polyllama.sh  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
_reference_only/: example_mcp_config.json
_reference_only/llm-proxy/: Dockerfile  config.py  main.py  pyproject.toml
_reference_only/llm-proxy/api/: chat.py  files.py  models.py  sessions.py
_reference_only/llm-proxy/services/: mcp_client.py  message_manager.py  multi_llm_service.py
builder/: __init__.py  cli.py  detector.py  docker-compose.template.yml  docker-compose.yml.j2  generate_compose.py  generator.py  nginx.conf.j2
stack/llm-proxy/: Dockerfile  config.py  main.py  requirements.txt
stack/llm-proxy/api/: chat.py  models.py  sessions.py
stack/llm-proxy/services/: mcp_client.py  message_manager.py  multi_llm_service.py
stack/olah/: Dockerfile  olah-config.toml
stack/ollama/: Dockerfile  cuda_host_shim.cpp  gpu_metrics_server.py  startServices.sh
stack/open-webui/: Dockerfile
stack/polyllama/: Dockerfile  model_router.lua  proxy_params.conf
stack/polyllama/ui/: next.config.js  pnpm-lock.yaml
stack/polyllama/ui/app/: types.ts  utils.ts
stack/polyllama/ui/app/components/: ChatInterface.tsx  LoadModelModal.tsx  ModelManagement.tsx  ModelPullManager.tsx  ModelRow.tsx  PolyLlamaInstance.tsx
stack/router/: Dockerfile  index.html  model_router.lua  nginx.conf.j2  nginx.conf.template  script.js  supervisord-dev.conf  supervisord-prod.conf
stack/router/app/: package.json  pnpm-lock.yaml  tailwind.config.js
stack/router/app/app/: globals.css  layout.tsx  page.module.css  page.tsx  types.ts
stack/router/app/app/chat/: page.tsx
stack/router/app/app/components/: CPUMetrics.tsx  ChatInterface.tsx  FlowChart.tsx  GPUDevice.tsx  Header.module.css  Header.tsx  InstanceGrid.module.css  InstanceGrid.tsx  InstanceLoadButton.tsx  (+10 more)
tests/: README.md  edge_cases.py  example_system_generation.py  generation.py  run_tests.sh  test_cli.py  test_edge_cases.py  test_generation.py
tests/test_artifacts/: docker-compose.yml  example_system_docker-compose.yml  example_system_gpu_config.json  example_system_nginx.conf  nginx.conf
(+1 files in other folders)
