[project]
name = "polyllama"
version = "0.1.0"
description = "Dynamic multi-instance Ollama orchestration system with automatic GPU detection and intelligent load balancing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pytest>=8.4.0", "pyyaml>=6.0", "jinja2>=3.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_functions = ["*"]
python_files = ["*.py"]
python_classes = ["*"]
