[project]
name = "llm-proxy-service"
version = "0.1.0"
description = "LLM Proxy Service for chat completions and tool orchestration"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "litellm>=1.30.0",
    "neo4j>=5.0.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.0.0",
    "python-magic>=0.4.27",
    "faster-whisper>=0.10.0",
    "speechrecognition>=3.10.0",
    "pydub>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "services", "config.py", "main.py"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "httpx>=0.25.0",
]